--- a/client/scripts/modules/interface/game/city/cityCard.html
+++ b/client/scripts/modules/interface/game/city/cityCard.html
@@ -1,74 +1,408 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>City</title>
-    <link rel="stylesheet" href="../../../../../../css/gameInterface/trucksMenu.css">
-    <link rel="stylesheet" href="../../../../../../css/master.css">
-    <link rel="stylesheet" href="../../../../../../css/gameInterface/city.css">
-    <link rel="stylesheet" href="../../../../../../css/gameInterface/card.css">
-    <link rel="stylesheet" href="../../../../../../css/gameInterface/resource.css">
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap');
-    </style>
-  </head>
-  <body>
 
-    <section id="cityMenuSection">
-      <div class="card" id="cityCard">
-        <div class="card-header">
-          city <span class="card-header-span"> | 01</span>
+<head>
+  <meta charset="utf-8">
+  <title>City</title>
+  <link rel="stylesheet" href="../../../../../../css/master.css">
+  <link rel="stylesheet" href="../../../../../../css/gameInterface/rooms.css">
+
+
+
+  <link rel="stylesheet" href="../../../../../../css/gameInterface/gameScreen.css">
+  <link rel="stylesheet" href="../../../../../../css/gameInterface/auth.css">
+
+  <link rel="stylesheet" href="../../../../../../css/gameInterface/icons.css">
+  <link rel="stylesheet" href="../../../../../../css/gameInterface/product.css">
+
+
+  <link rel="stylesheet" href="../../../../../../css/gameInterface/ceilMenu.css">
+  <link rel="stylesheet" href="../../../../../../css/gameInterface/balance.css">
+  <link rel="stylesheet" href="../../../../../../css/gameInterface/turn.css">
+  <link rel="stylesheet" href="../../../../../../css/gameInterface/factory.css">
+  <link rel="stylesheet" href="../../../../../../css/gameInterface/trucksMenu.css">
+  <link rel="stylesheet" href="../../../../../../css/gameInterface/path.css">
+  <link rel="stylesheet" href="../../../../../../css/gameInterface/gameNotifications.css">
+  <link rel="stylesheet" href="../../../../../../css/gameInterface/creditMenu.css">
+  <link rel="stylesheet" href="../../../../../../css/gameInterface/city.css">
+  <link rel="stylesheet" href="../../../../../../css/gameInterface/card.css">
+  <link rel="stylesheet" href="../../../../../../css/gameInterface/resource.css">
+
+</head>
+
+<body>
+
+  <section id="cityMenuSection">
+    <div class="cityCard">
+
+      <div class="cityCard_header">
+        <div class="cityCard_header_bg">
+          <div class="cityCard_header-header">
+            <span>city <span class="cityCard_header-header-span">| westown</span></span>
+          </div>
+          <div class="cityCard_header-title">
+            Northfield
+          </div>
+          <div class="cityCard_header-balance">
+            $354090
+          </div>
         </div>
-        <div class="cityCard-title">
-          Northfield
+      </div>
+
+      <div class="cityCard_body">
+        <div class="cityCard_body-header">
+          <div class="cityCard_body-header-item ">
+            Строй материалы
+          </div>
+          <div class="cityCard_body-header-item cityCard_body-header-item-selected">
+            Хоз магазин
+          </div>
+          <div class="cityCard_body-header-item">
+
+          </div>
+          <div class="cityCard_body-header-item">
+
+          </div>
         </div>
+        <div class="cityCard_body-body">
+          <div class="cityCard_body_list">
 
-
-        <div class="cityCard-list">
-          <div class="cityCard-list-item">
-            <div class="resource-bg-color-wood cityCard-resource-image">
-              <div class="cityCard-resource-image-name">
-                wood
+            <div class="cityCard_body_list-item">
+              <div class="cityCard_body_list-item-price">
+                $100000
               </div>
-            </div>
-            <div class="cityCard-resource-info">
-              <div class="cityCard-resource-info-price ">$20000</div>
-              <div class="cityCard-resource-info-holes">
-                <div class="resource-hole">
-                  <div class="cityCard-resource-info-holes-price">$300</div>
+              <div class="cityCard_body_list-item-progressBar">
+
+                <div class="cityCard_body_list-item-progressBar-start">
+                  <div class="cityCard_body_list-item-progressBar-start-icon product-wood">
+
+                  </div>
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  100%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  95%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  90%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  85%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  80%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  75%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  70%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  65%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  60%
+                </div>
+                <div class="cityCard_body_list-item-progressBar-division">
+                  55%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  50%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  45%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  40%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  35%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  30%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  25%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  20%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  15%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  10%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  5%
+                </div>
+
+
+
+
+                <div  class="cityCard_body_list-item-progressBar-product">
+                  <div class="cityCard_body_list-item-progressBar-product-icon product-wood">
+
+                  </div>
                 </div>
 
 
               </div>
+
+              <div class="cityCard_body_list-item-speed">
+                10%/step
+              </div>
             </div>
+
+            <div class="cityCard_body_list-item">
+              <div class="cityCard_body_list-item-price">
+                $100000
+              </div>
+              <div class="cityCard_body_list-item-progressBar">
+
+                <div class="cityCard_body_list-item-progressBar-start">
+                  <div class="cityCard_body_list-item-progressBar-start-icon product-wood">
+
+                  </div>
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  100%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  95%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  90%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  85%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  80%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  75%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  70%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  65%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  60%
+                </div>
+                <div class="cityCard_body_list-item-progressBar-division">
+                  55%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  50%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  45%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  40%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  35%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  30%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  25%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  20%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  15%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  10%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  5%
+                </div>
+
+
+
+
+                <div  class="cityCard_body_list-item-progressBar-product">
+                  <div class="cityCard_body_list-item-progressBar-product-icon product-wood">
+
+                  </div>
+                </div>
+
+
+              </div>
+
+              <div class="cityCard_body_list-item-speed">
+                10%/step
+              </div>
+            </div>
+
+
+            <div class="cityCard_body_list-item">
+              <div class="cityCard_body_list-item-price">
+                $100000
+              </div>
+              <div class="cityCard_body_list-item-progressBar">
+
+                <div class="cityCard_body_list-item-progressBar-start">
+                  <div class="cityCard_body_list-item-progressBar-start-icon product-wood">
+
+                  </div>
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  100%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  95%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  90%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  85%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  80%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  75%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  70%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  65%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  60%
+                </div>
+                <div class="cityCard_body_list-item-progressBar-division">
+                  55%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  50%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  45%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  40%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  35%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  30%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  25%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  20%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  15%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  10%
+                </div>
+
+                <div class="cityCard_body_list-item-progressBar-division">
+                  5%
+                </div>
+
+
+
+
+                <div  class="cityCard_body_list-item-progressBar-product">
+                  <div class="cityCard_body_list-item-progressBar-product-icon product-wood">
+
+                  </div>
+                </div>
+
+
+              </div>
+
+              <div class="cityCard_body_list-item-speed-gap">
+                10%/step
+              </div>
+            </div>
+
+
+
           </div>
 
 
-          <div class="cityCard-list-item">
-            <div class="resource-bg-color-water cityCard-resource-image">
-              <div class="cityCard-resource-image-name">
-                water
-              </div>
-            </div>
-            <div class="cityCard-resource-info">
-              <div class="cityCard-resource-info-price ">$20000</div>
-              <div class="cityCard-resource-info-holes">
-                <div class="resource-hole"></div>
-                <div class="resource-hole"></div>
-                <div class="resource-hole"></div>
-                <div class="resource-hole"></div>
-                <div class="resource-hole"></div>
-                <div class="resource-hole"></div>
-                <div class="resource-hole"></div>
-
-              </div>
-            </div>
-          </div>
         </div>
-
-
       </div>
+    </div>
+    </div>
 
-    </section>
-  </body>
+  </section>
+</body>
+
 </html>
