--- a/client/scripts/modules/interface/game/city/cityCard.html
+++ b/client/scripts/modules/interface/game/city/cityCard.html
@@ -50,20 +50,22 @@
       </div>
 
       <div class="cityCard_body">
-        <div class="cityCard_body-header">
-          <div class="cityCard_body-header-item ">
-            Строй материалы
+        <div class="cityCard_body-menu">
+          <div class="cityCard_body-menu-item ">
+            <!-- Строй материалы -->
           </div>
-          <div class="cityCard_body-header-item cityCard_body-header-item-selected">
-            Хоз магазин
+          <div class="cityCard_body-menu-item cityCard_body-menu-item-selected">
+            <!-- Хоз магазин -->
           </div>
-          <div class="cityCard_body-header-item">
+          <div class="cityCard_body-menu-item">
 
           </div>
-          <div class="cityCard_body-header-item">
+          <div class="cityCard_body-menu-item">
 
           </div>
         </div>
+
+        
         <div class="cityCard_body-body">
           <div class="cityCard_body_list">
 
@@ -75,98 +77,34 @@
 
                 <div class="cityCard_body_list-item-progressBar-start">
                   <div class="cityCard_body_list-item-progressBar-start-icon product-wood">
-
                   </div>
                 </div>
 
-                <div class="cityCard_body_list-item-progressBar-division">
-                  100%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  95%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  90%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  85%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  80%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  75%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  70%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  65%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  60%
-                </div>
-                <div class="cityCard_body_list-item-progressBar-division">
-                  55%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  50%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  45%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  40%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  35%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  30%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  25%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  20%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  15%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  10%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  5%
-                </div>
-
-
-
+                <div class="cityCard_body_list-item-progressBar-division">100%</div>
+                <div class="cityCard_body_list-item-progressBar-division">95%</div>
+                <div class="cityCard_body_list-item-progressBar-division">90%</div>
+                <div class="cityCard_body_list-item-progressBar-division">85%</div>
+                <div class="cityCard_body_list-item-progressBar-division">80%</div>
+                <div class="cityCard_body_list-item-progressBar-division">75%</div>
+                <div class="cityCard_body_list-item-progressBar-division">70%</div>
+                <div class="cityCard_body_list-item-progressBar-division">65%</div>
+                <div class="cityCard_body_list-item-progressBar-division">60%</div>
+                <div class="cityCard_body_list-item-progressBar-division">55%</div>
+                <div class="cityCard_body_list-item-progressBar-division">50%</div>
+                <div class="cityCard_body_list-item-progressBar-division">45%</div>
+                <div class="cityCard_body_list-item-progressBar-division">40%</div>
+                <div class="cityCard_body_list-item-progressBar-division">35%</div>
+                <div class="cityCard_body_list-item-progressBar-division">30%</div>
+                <div class="cityCard_body_list-item-progressBar-division">25%</div>
+                <div class="cityCard_body_list-item-progressBar-division">20%</div>
+                <div class="cityCard_body_list-item-progressBar-division">15%</div>
+                <div class="cityCard_body_list-item-progressBar-division">10%</div>
+                <div class="cityCard_body_list-item-progressBar-division">5%</div>
 
                 <div  class="cityCard_body_list-item-progressBar-product">
                   <div class="cityCard_body_list-item-progressBar-product-icon product-wood">
-
                   </div>
                 </div>
-
 
               </div>
 
@@ -174,225 +112,6 @@
                 10%/step
               </div>
             </div>
-
-            <div class="cityCard_body_list-item">
-              <div class="cityCard_body_list-item-price">
-                $100000
-              </div>
-              <div class="cityCard_body_list-item-progressBar">
-
-                <div class="cityCard_body_list-item-progressBar-start">
-                  <div class="cityCard_body_list-item-progressBar-start-icon product-wood">
-
-                  </div>
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  100%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  95%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  90%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  85%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  80%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  75%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  70%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  65%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  60%
-                </div>
-                <div class="cityCard_body_list-item-progressBar-division">
-                  55%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  50%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  45%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  40%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  35%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  30%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  25%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  20%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  15%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  10%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  5%
-                </div>
-
-
-
-
-                <div  class="cityCard_body_list-item-progressBar-product">
-                  <div class="cityCard_body_list-item-progressBar-product-icon product-wood">
-
-                  </div>
-                </div>
-
-
-              </div>
-
-              <div class="cityCard_body_list-item-speed">
-                10%/step
-              </div>
-            </div>
-
-
-            <div class="cityCard_body_list-item">
-              <div class="cityCard_body_list-item-price">
-                $100000
-              </div>
-              <div class="cityCard_body_list-item-progressBar">
-
-                <div class="cityCard_body_list-item-progressBar-start">
-                  <div class="cityCard_body_list-item-progressBar-start-icon product-wood">
-
-                  </div>
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  100%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  95%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  90%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  85%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  80%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  75%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  70%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  65%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  60%
-                </div>
-                <div class="cityCard_body_list-item-progressBar-division">
-                  55%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  50%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  45%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  40%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  35%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  30%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  25%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  20%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  15%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  10%
-                </div>
-
-                <div class="cityCard_body_list-item-progressBar-division">
-                  5%
-                </div>
-
-
-
-
-                <div  class="cityCard_body_list-item-progressBar-product">
-                  <div class="cityCard_body_list-item-progressBar-product-icon product-wood">
-
-                  </div>
-                </div>
-
-
-              </div>
-
-              <div class="cityCard_body_list-item-speed-gap">
-                10%/step
-              </div>
-            </div>
-
-
 
           </div>
 
