ceilmenu html and city menu css fix

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,8 @@
   <link rel="stylesheet" href="./css/gameInterface/icons.css">
 
   <link rel="stylesheet" href="./css/gameInterface/product.css">
+  <link rel="stylesheet" href="./css/gameInterface/images.css">
+
 
   <link rel="stylesheet" href="./css/gameInterface/ceilMenu.css">
   <link rel="stylesheet" href="./css/gameInterface/balance.css">
