--- a/client/scripts/modules/interface/game/ceilMenu/ceilMenu.html
+++ b/client/scripts/modules/interface/game/ceilMenu/ceilMenu.html
@@ -4,6 +4,19 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="../../../../../../css/master.css">
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/rooms.css">
+
+
+
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/gameScreen.css">
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/auth.css">
+
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/icons.css">
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/product.css">
+    <link rel="stylesheet" href="../../../../../../css/gameInterface/images.css">
+
+
+
     <link rel="stylesheet" href="../../../../../../css/gameInterface/ceilMenu.css">
     <link rel="stylesheet" href="../../../../../../css/gameInterface/balance.css">
     <link rel="stylesheet" href="../../../../../../css/gameInterface/turn.css">
@@ -19,45 +32,51 @@
   </head>
   <body>
     <section id="onCeilDoubleClick">
-      <!-- <div id="sectorMenu">
-        <div class="sectorMenu_Left">
-          <div id="changeSectorButton" class="sectorMenu_Top_CentralButton"></div>
+      <div class="sectorMenu_centralButton ">
+        <div class="sectorMenu_centralButton-icon icon-changeSector">
         </div>
-        <div class="sectorMenu_Right" id="sectorMenu_List">
-          <div class="sectorMenu_button">
-            <div class="sectorMenu_button_title">
-              сталелитейный завод
-            </div>
-            <div class="sectorMenu_button_price">
-              $40000
+      </div>
+      <div class="sectorMenu_menu">
+        <div class="sectorMenu_menu-header">
+          <div class="sectorMenu_menu-header-button">
+            <div class="sectorMenu_menu-header-button-icon icon-bridge">
+
             </div>
           </div>
-
         </div>
-      </div> -->
+        <div class="sectorMenu_menu-body">
+          <div class="sectorMenu_menu-card">
+            <div class="sectorMenu_menu-card-header">
+              <span>sawmill <span  class="sectorMenu_menu-card-header-span-bold">| 10</span></span>
+            </div>
+            <div class="sectorMenu_menu-card-image image-sawmill_a">
 
-      <div id="buildingMenu">
-        <div class="buildingMenu_card">
-          <div class="buildingMenu_card_title">
-            сталелитейный завод
+            </div>
+            <div class="sectorMenu_menu-card-description">
+              <div class="sectorMenu_menu-card-description-gradient">
+
+              </div>
+              <div class="sectorMenu_menu-card-description-productsList">
+                <div class="sectorMenu_menu-card-description-product product-wood">
+
+                </div>
+              </div>
+
+              <div class="sectorMenu_menu-card-description-title">
+                Нефтеперерабатывающий завод
+              </div>
+
+              <div class="sectorMenu_menu-card-description-button">
+                <span>$50000</span>
+              </div>
+
+
+            </div>
           </div>
-          <div class="buildingMenu_card_price">
-            $40000
-          </div>
-        </div>
-        <div class="buildingMenu_button">
-          <span class="buildingMenu_button-span">назад</span>
 
-        </div>
-
-        <div class="buildingMenu_button">
-          <span class="buildingMenu_button-span">построить</span>
 
         </div>
       </div>
-      <div id="center"></div>
-
-
     </section>
 
   </body>
