--- a/client/scripts/modules/interface/game/ceilMenu/ceilMenu.html
+++ b/client/scripts/modules/interface/game/ceilMenu/ceilMenu.html
@@ -32,19 +32,24 @@
   </head>
   <body>
     <section id="onCeilDoubleClick">
-      <div class="sectorMenu_centralButton ">
+      <div class="sectorMenu_centralButton" id="changeSectorButton">
         <div class="sectorMenu_centralButton-icon icon-changeSector">
         </div>
       </div>
       <div class="sectorMenu_menu">
         <div class="sectorMenu_menu-header">
+          <!-- button -->
           <div class="sectorMenu_menu-header-button">
             <div class="sectorMenu_menu-header-button-icon icon-bridge">
 
             </div>
           </div>
+
+          <!-- //button -->
         </div>
         <div class="sectorMenu_menu-body">
+
+          <!-- CARD -->
           <div class="sectorMenu_menu-card">
             <div class="sectorMenu_menu-card-header">
               <span>sawmill <span  class="sectorMenu_menu-card-header-span-bold">| 10</span></span>
@@ -69,12 +74,10 @@
               <div class="sectorMenu_menu-card-description-button">
                 <span>$50000</span>
               </div>
-
-
             </div>
           </div>
 
-
+          <!-- //CARD -->
         </div>
       </div>
     </section>
