ceil menu build html

--- a/client/scripts/modules/interface/game/ceilMenu/ceilMenu.html
+++ b/client/scripts/modules/interface/game/ceilMenu/ceilMenu.html
@@ -32,24 +32,21 @@
   </head>
   <body>
     <section id="onCeilDoubleClick">
-      <div class="sectorMenu_centralButton" id="changeSectorButton">
+      <!-- <div class="sectorMenu_centralButton" id="changeSectorButton">
         <div class="sectorMenu_centralButton-icon icon-changeSector">
         </div>
       </div>
       <div class="sectorMenu_menu">
         <div class="sectorMenu_menu-header">
-          <!-- button -->
           <div class="sectorMenu_menu-header-button">
             <div class="sectorMenu_menu-header-button-icon icon-bridge">
 
             </div>
           </div>
 
-          <!-- //button -->
         </div>
         <div class="sectorMenu_menu-body">
 
-          <!-- CARD -->
           <div class="sectorMenu_menu-card">
             <div class="sectorMenu_menu-card-header">
               <span>sawmill <span  class="sectorMenu_menu-card-header-span-bold">| 10</span></span>
@@ -77,8 +74,56 @@
             </div>
           </div>
 
-          <!-- //CARD -->
         </div>
+      </div> -->
+      <div class="sectorMenu_build">
+        <div class="sectorMenu_build_card">
+          <div class="sectorMenu_build_card-title">
+            Water station
+          </div>
+          <div class="sectorMenu_build_card-price">
+            $45000
+          </div>
+
+          <div class="sectorMenu_build_card-image image-sawmill_a ">
+
+          </div>
+
+          <div class="sectorMenu_build_card-productsList">
+            <div class="sectorMenu_build_card-productsList-item">
+
+                <div class="factory_body_ingredientList-icon product-oil"></div>
+                <div class="factory_body_ingredientList-icon product-sand"></div>
+                <div class="factory_body_ingredientList-icon product-steel"></div>
+                <div class="factory_body_ingredientList-icon product-gold"></div>
+                <div class="factory_body_ingredientList-arrow">
+                  <div class="factory_body_ingredientList-arrow-coast">
+                    $30000
+                  </div>
+                  <div class="factory_body_ingredientList-arrow-symbol">
+                    →
+                  </div>
+                </div>
+                <div class="factory_body_ingredientList-icon product-petrol"></div>
+                <div class="factory_body_ingredientList-volume">
+                  <span>x2</span>
+                </div>
+
+            </div>
+          </div>
+
+
+
+        </div>
+
+        <div class="sectorMenu_build_button">
+          build
+        </div>
+
+        <div class="sectorMenu_build_button">
+          cancel
+        </div>
+        
       </div>
     </section>
 
