building menu done

--- a/client/scripts/modules/interface/game/ceilMenu/ceilMenu.html
+++ b/client/scripts/modules/interface/game/ceilMenu/ceilMenu.html
@@ -76,7 +76,7 @@
 
         </div>
       </div> -->
-      <div class="sectorMenu_build">
+      <div class="sectorMenu_build" id="buildingMenu">
         <div class="sectorMenu_build_card">
           <div class="sectorMenu_build_card-title">
             Water station
@@ -123,7 +123,7 @@
         <div class="sectorMenu_build_button">
           cancel
         </div>
-        
+
       </div>
     </section>
 
