game settings menu

--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,7 @@
 
   <link rel="stylesheet" href="./css/gameInterface/product.css">
   <link rel="stylesheet" href="./css/gameInterface/images.css">
+  <link rel="stylesheet" href="./css/gameInterface/settings.css">
 
 
   <link rel="stylesheet" href="./css/gameInterface/ceilMenu.css">
