--- a/client/howtoplay.html
+++ b/client/howtoplay.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/master.css">
   <link rel="stylesheet" href="./css/gameInterface/rooms.css">
   <link rel="stylesheet" href="./css/gameInterface/tutorial.css">
-
+  <link rel="stylesheet" href="./css/gameInterface/loading.css">
 
 
 
@@ -52,6 +52,11 @@
 
 <body>
 
+  <section id="loading">
+    <div class="loading-container">
+      <div id="loadingProgress"></div>
+    </div>
+  </section>
 
   <section id="screen">
 
